@@ -15,6 +15,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+3/10/14
+    - Fixed bug in qps_gurobi() where return status values for
+      NUMERIC and SUBOPTIMAL were swapped. Added INPROGRESS status.
+      Thanks to Alberto Lamadrid for catching this.
+
 3/2/14
     - Fixed bug in case_info() that incorrectly included dispatchable
       loads in amount reported for min/max capacity for Generation.
